# OMLit

./: CMakeLists.txt  README.md
omlit/core/: function.cpp
omlit/include/omlit/core/: object.hpp
omlit/include/omlit/interface/: interface_impl.hpp
omlit/include/omlit/lua/: binding.hpp
omlit/interface/: module_id.cpp
omlit/lua/: binding.cpp
src/: demo_module.cpp  main.cpp  test_class.hpp
src/omlit/include/omlit/: omlit.hpp
src/omlit/include/omlit/common/: common.hpp
src/omlit/include/omlit/core/: function.hpp  value.hpp
src/omlit/include/omlit/interface/: interface.hpp  module_id.hpp
src/omlit/include/omlit/utils/: wrapper_value.hpp
src/omlit/src/core/: object.cpp  value.cpp
src/omlit/src/interface/: interface_impl.cpp
